2nd commit with all original images of sponsor

--- a/sponsor.html
+++ b/sponsor.html
@@ -190,12 +190,12 @@
                 <div class="row mb-4 mx-auto">
                     <div class="col-lg-6">
                         <div class="sponsorship-level">
-                            <img src="/assets/images/platinum.png" alt="Platinum Sponsor Logo" class="img-fluid mb-3">
+                            <img src="/assets/images/platinums.png" alt="Platinum Sponsor Logo" class="img-fluid mb-3">
                         </div>
                     </div>
 
                     <div class="col-lg-6">
-                        <div class="sponsorship-level" style="margin-top: 30%;">
+                        <div class="sponsorship-level" style="margin-top: 15%;">
                             <h3>PLATINUM SPONSOR - $6,000</h3>
                             <p>- 45mins Keynote Speaking Slot</p>
                             <p>- Branding exposure</p>
@@ -208,12 +208,12 @@
                 <div class="row mb-4 mx-auto">
                     <div class="col-lg-6">
                         <div class="sponsorship-level">
-                            <img src="assets/images/gold.png" alt="Gold Sponsor Logo" class="img-fluid mb-3">
+                            <img src="assets/images/Gold.png" alt="Gold Sponsor Logo" class="img-fluid mb-3">
                         </div>
                     </div>
 
                     <div class="col-lg-6">
-                        <div class="sponsorship-level" style="margin-top: 30%;">
+                        <div class="sponsorship-level" style="margin-top: 15%;">
                             <h3>GOLD SPONSOR - $5,000</h3>
                             <p>- 30mins Keynote Speaking Slot</p>
                             <p>- Branding exposure</p>
@@ -231,7 +231,7 @@
                     </div>
 
                     <div class="col-lg-6">
-                        <div class="sponsorship-level" style="margin-top: 30%;">
+                        <div class="sponsorship-level" style="margin-top: 15%;">
                             <h3>SILVER SPONSOR - $4,000</h3>
                             <p>- 30mins Panel Speaking Slot</p>
                             <p>- Branding exposure</p>
@@ -249,7 +249,7 @@
                     </div>
 
                     <div class="col-lg-6">
-                        <div class="sponsorship-level" style="margin-top: 30%;">
+                        <div class="sponsorship-level" style="margin-top: 15%;">
                             <h3>BRONZE SPONSOR - $3,000</h3>
                             <p>- 30mins Keynote Speaking Slot</p>
                             <p>- Branding exposure</p>
@@ -335,7 +335,7 @@
                     </div>
 
                     <div class="col-lg-6">
-                        <div class="sponsorship-level" style="margin-top: 30%;">
+                        <div class="sponsorship-level" style="margin-top: 15%;">
                             <h3>NAME BADGE LANYARDS - $1,500</h3>
                             <p>- Association of your logo to SRC event</p>
                             <p>- Company logo directly Located to attendees badge</p>
@@ -354,7 +354,7 @@
                     </div>
 
                     <div class="col-lg-6">
-                        <div class="sponsorship-level" style="margin-top: 30%;">
+                        <div class="sponsorship-level" style="margin-top: 15%;">
                             <h3>NAME BADGE INSERT - $1,000</h3>
                             <p>- Company Recognition</p>
                             <p>- Introduce your new product right on the Attendee's badge</p>
@@ -425,7 +425,7 @@
 
                     <div class="col-lg-6">
                         <div class="sponsorship-level">
-                            <img src="assets/images/refreshment.jpg" alt="Gold Sponsor Logo" class="img-fluid mb-3">
+                            <img src="assets/images/refreshment.png" alt="Gold Sponsor Logo" class="img-fluid mb-3" style="margin-top: 150px;">
                         </div>
                     </div>
 
@@ -470,7 +470,7 @@
                     </div>
 
                     <div class="col-lg-6">
-                        <div class="sponsorship-level" style="margin-top: 30%;">
+                        <div class="sponsorship-level" style="margin-top: 15%;">
                             <h3>
                                 WIRELESS INTERNET - $1,500</h3>
                             <p>- Wireless Internet will be featured available in the area + Plenary Session Hall, 2 complimentary tickets to the welcome reception.</p>
